--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main>
       <div class="puff">
+        <img src="./images/Image.png" alt="A beautiful view of slussen." />
         <h1>Here´s a heading</h1>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
