--- a/index.html
+++ b/index.html
@@ -9,14 +9,34 @@
   </head>
   <body>
     <main>
-      <div class="puff">
-        <img src="./images/Image.png" alt="A beautiful view of slussen." />
-        <h1>Here´s a heading</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <a class="button">Button</a>
+      <div class="puff-wrapper">
+        <div class="puff">
+          <img src="./images/Image.png" alt="A beautiful view of slussen." />
+          <h2>Here´s a heading</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a class="button">Button</a>
+        </div>
+        <div class="puff">
+          <img src="./images/Image.png" alt="A beautiful view of slussen." />
+          <h2>Here´s a heading</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a class="button">Button</a>
+        </div>
+        <div class="puff">
+          <img src="./images/Image.png" alt="A beautiful view of slussen." />
+          <h2>Here´s a heading</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a class="button">Button</a>
+        </div>
       </div>
     </main>
   </body>
