--- a/index.html
+++ b/index.html
@@ -9,35 +9,38 @@
   </head>
   <body>
     <main>
-      <div class="puff-wrapper">
-        <div class="puff">
-          <img src="./images/Image.png" alt="A beautiful view of slussen." />
-          <h2>Here´s a heading</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <a class="button">Button</a>
+      <section>
+        <h1>Here´s the section heading</h1>
+        <div class="puff-wrapper">
+          <div class="puff">
+            <img src="./images/Image.png" alt="A beautiful view of slussen." />
+            <h2>Here´s a heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a class="button">Button</a>
+          </div>
+          <div class="puff">
+            <img src="./images/Image.png" alt="A beautiful view of slussen." />
+            <h2>Here´s a heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a class="button">Button</a>
+          </div>
+          <div class="puff">
+            <img src="./images/Image.png" alt="A beautiful view of slussen." />
+            <h2>Here´s a heading</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a class="button">Button</a>
+          </div>
         </div>
-        <div class="puff">
-          <img src="./images/Image.png" alt="A beautiful view of slussen." />
-          <h2>Here´s a heading</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <a class="button">Button</a>
-        </div>
-        <div class="puff">
-          <img src="./images/Image.png" alt="A beautiful view of slussen." />
-          <h2>Here´s a heading</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-          <a class="button">Button</a>
-        </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
